fix styles on safari and create var for button text

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   --surface: #c0c0c0;
   --button-highlight: #ffffff;
   --button-face: #dfdfdf;
+  --button-text: #000;
   --button-shadow: #808080;
   --window-frame: #0a0a0a;
   --dialog-blue: #000080;
@@ -130,11 +131,14 @@ u {
 button,
 input[type="submit"],
 input[type="reset"] {
+  all: unset;
+  color: var(--button-text);
   box-sizing: border-box;
   border: none;
   background: var(--surface);
   box-shadow: var(--border-raised-outer), var(--border-raised-inner);
-  border-radius: 0;
+  border-radius: 0px;
+  outline: none;
 
   min-width: 75px;
   min-height: 23px;
